--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -3,13 +3,15 @@ trigger:
     include:
       - main
 
-jobs:
-- job: Deploy
-  displayName: Deploy Static Web App
-  pool: server
-  steps:
-  - task: AzureStaticWebApp@0
-    inputs:
-      app_location: "app"
-      output_location: ""
-      azure_static_web_apps_api_token: $(AZURE_STATIC_WEB_APPS_API_TOKEN)
+variables:
+- group: AZURE_STATIC_WEB_APPS_API_TOKEN
+
+pool:
+  name: 'mini-yt'
+
+steps:
+- task: AzureStaticWebApp@0
+  inputs:
+    app_location: "app"
+    output_location: ""
+    azure_static_web_apps_api_token: $(AZURE_STATIC_WEB_APPS_API_TOKEN)
